# DexCorn

./: .gitmodules  CMakeLists.txt  README.md
include/covinhas/: emulator-dalvik.hpp
include/emulator/: emulator-unicorn.hpp
include/parser/dalvik/: parser-dalvik.hpp
sources/: CMakeLists.txt  main.cpp
sources/covinhas/: emulator-dalvik.cpp
sources/emulator/: emulator-unicorn.cpp
sources/parser/dalvik/: parser-dalvik.cpp
tests/: CMakeLists.txt
